# HAI819I_moteur_jeux

./: .gitignore  CMakeLists.txt  compileandrun.sh  truc
TP1/: ImageBase.cpp  ImageBase.h  Mesh.cpp  Mesh.hpp  Octree.hpp  Scene.hpp  TP1  TP1.cpp  Transformation.hpp  fragment_shader.glsl  imageLoader.cpp  imageLoader.h  vertex_shader.glsl
TP1/textures/: 128.ppm  moon_texture.ppm
ressources/: sources.txt
ressources/shaders/: vertex_shader.glsl
ressources/textures/: BlocCSS.ppm  albedo_atlas.xcf  block_atlas.ppm  block_atlas.xcf  empty_atlas.xcf  normal_atlas.xcf  specular_map.xcf  water.ppm
src/: AABB.hpp  Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Entity.hpp  ImageBase.cpp  Mesh.cpp  Mesh.hpp  Octree.hpp  RigidBody.hpp  Scene.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp  Transformation.hpp  World.cpp  World.hpp  main.cpp
src/objects/: blocks.hpp  textures.hpp
src/old/: ImageBase.cpp  ImageBase.h  Mesh.cpp  Mesh.hpp  Octree.hpp  image_ppm.h
src/shaders/: block_fragment.glsl  block_vertex.glsl  line_fragment.glsl  line_vertex.glsl
